--- a/client/src/app/components/inventory/food-table/delete/delete.component.html
+++ b/client/src/app/components/inventory/food-table/delete/delete.component.html
@@ -1,13 +1,13 @@
 <div class="container">
   <h3 mat-dialog-title>Are you sure?</h3>
   <div mat-dialog-content>
-    Id: {{data.id}}
+    Id: {{data.mid}}
     <p></p>
-    Meal Name: {{data.title}}
+    Meal Name: {{data.name}}
     <p></p>
-    State: {{data.state}}
+    State: {{data.type}}
     <p></p>
-    Price: {{data.url}}
+    Price: {{data.price}}
     <p></p>
   </div>
 
