--- a/client/src/app/components/inventory/food-table/edit/edit.component.html
+++ b/client/src/app/components/inventory/food-table/edit/edit.component.html
@@ -5,7 +5,7 @@
 
     <div class="form">
       <mat-form-field color="accent">
-        <input matInput #input class="form-control" placeholder="Id" [(ngModel)]="data.id" name="id" required>
+        <input matInput #input class="form-control" placeholder="Id" [(ngModel)]="data.mid" name="mid" required>
         <mat-error *ngIf="formControl.invalid">{{getErrorMessage()}}</mat-error>
       </mat-form-field>
     </div>
@@ -13,7 +13,7 @@
     <!--Textarea for demo purposes-->
     <div class="form">
       <mat-form-field color="accent">
-        <textarea matInput #input class="form-control" placeholder="Meal Name" [(ngModel)]="data.title" name="title" required></textarea>
+        <textarea matInput #input class="form-control" placeholder="Meal Name" [(ngModel)]="data.name" name="name" required></textarea>
         <mat-error *ngIf="formControl.invalid">{{getErrorMessage()}}</mat-error>
       </mat-form-field>
     </div>
@@ -21,8 +21,7 @@
     <!--Contains mat-hint for characters count and has maxLengt set-->
     <div class="form">
       <mat-form-field color="accent">
-        <input matInput #inputstate class="form-control" placeholder="Type" [(ngModel)]="data.state" name="state" maxlength="10"
-          required>
+        <input matInput #inputstate class="form-control" placeholder="Type" [(ngModel)]="data.type" name="type" maxlength="10" required>
         <mat-error *ngIf="formControl.invalid">{{getErrorMessage()}}</mat-error>
         <mat-hint align="end">{{inputstate.value?.length || 0}}/10</mat-hint>
       </mat-form-field>
@@ -30,24 +29,24 @@
 
     <div class="form">
       <mat-form-field color="accent">
-        <input matInput placeholder="Price" [(ngModel)]="data.url" name="url">
+        <input matInput placeholder="Price" [(ngModel)]="data.price" name="price">
       </mat-form-field>
     </div>
 
     <div class="form">
       <mat-form-field color="accent">
-        <input matInput placeholder="Description" [(ngModel)]="data.created_at" name="created_at">
+        <input matInput placeholder="Description" [(ngModel)]="data.description" name="description">
       </mat-form-field>
     </div>
 
     <div class="form">
       <mat-form-field color="accent">
-        <input matInput placeholder="Quantity" [(ngModel)]="data.updated_at" name="updated_at">
+        <input matInput placeholder="Quantity" [(ngModel)]="data.quantity" name="quantity">
       </mat-form-field>
     </div>
 
     <div mat-dialog-actions>
-      <button mat-button [type]="submit" [disabled]="!formControl.valid" [mat-dialog-close]="1" (click)="stopEdit()">Save</button>
+      <button mat-button [type]="submit" [mat-dialog-close]="1" (click)="Edit()">Save</button>
       <button mat-button (click)="onNoClick()" tabindex="-1">Cancel</button>
     </div>
   </form>
