--- a/client/src/app/components/inventory/food-table/food-table.component.html
+++ b/client/src/app/components/inventory/food-table/food-table.component.html
@@ -14,7 +14,7 @@
     <!-- ID Column -->
     <ng-container matColumnDef="mid">
       <mat-header-cell *matHeaderCellDef mat-sort-header>Id</mat-header-cell>
-      <mat-cell *matCellDef="let row" >{{row.mid}}</mat-cell>
+      <mat-cell *matCellDef="let row">{{row.mid}}</mat-cell>
     </ng-container>
 
     <ng-container matColumnDef="name">
@@ -41,7 +41,7 @@
       <mat-header-cell *matHeaderCellDef mat-sort-header>Description</mat-header-cell>
       <mat-cell *matCellDef="let row"> {{row.description}}</mat-cell>
     </ng-container>
-    
+
 
     <!-- actions -->
     <ng-container matColumnDef="actions">
@@ -67,14 +67,10 @@
   </mat-table>
 
 
-  <div class="no-results" [style.display]="dataSource.length == 0 ? '' : 'none'">
+  <div class="no-results" [style.display]="dataSource.renderedData.length == 0 ? '' : 'none'">
     No results
   </div>
 
-  <mat-paginator #paginator
-                 [length]="dataSource.length"
-                 [pageIndex]="0"
-                 [pageSize]="10"
-                 [pageSizeOptions]="[5, 10, 25, 100]">
+  <mat-paginator #paginator [length]="dataSource.filteredData.length" [pageIndex]="0" [pageSize]="10" [pageSizeOptions]="[5, 10, 25, 100]">
   </mat-paginator>
 </div>
