--- a/client/src/app/components/inventory/vehicle-table/add/add.component.html
+++ b/client/src/app/components/inventory/vehicle-table/add/add.component.html
@@ -1,3 +1,37 @@
-<p>
-  add works!
-</p>
+<div class="container">
+  <h3 mat-dialog-title>Add Vehicle</h3>
+
+  <form class="mat-dialog-content" (ngSubmit)="submit" #formControl="ngForm">
+
+    <!--Textarea for demo purposes-->
+    <div class="form">
+      <mat-form-field color="accent">
+        <textarea matInput #input class="form-control" placeholder="Brand Name" [(ngModel)]="data.brand" name="brand" required></textarea>
+      </mat-form-field>
+    </div>
+
+    <!--Contains mat-hint for characters count and has maxLengt set-->
+    <div class="form">
+      <mat-form-field color="accent">
+        <input matInput #inputstate class="form-control" placeholder="Model" [(ngModel)]="data.model" name="model" required>
+      </mat-form-field>
+    </div>
+
+    <div class="form">
+      <mat-form-field color="accent">
+        <input matInput placeholder="License No" class="form-control" [(ngModel)]="data.licenseno" name="licenseno" required>
+      </mat-form-field>
+    </div>
+
+    <div class="form">
+      <mat-form-field color="accent">
+        <input matInput placeholder="Date Pruchased" class="form-control" [(ngModel)]="data.dob" name="dob" required>
+      </mat-form-field>
+    </div>
+
+    <div mat-dialog-actions>
+      <button mat-button [type]="submit" [disabled]="!formControl.valid" [mat-dialog-close]="1" (click)="confirmAdd()">Save</button>
+      <button mat-button (click)="onNoClick()" tabindex="-1">Cancel</button>
+    </div>
+  </form>
+</div>
