--- a/client/src/app/components/inventory/vehicle-table/delete/delete.component.html
+++ b/client/src/app/components/inventory/vehicle-table/delete/delete.component.html
@@ -1,3 +1,18 @@
-<p>
-  delete works!
-</p>
+<div class="container">
+  <h3 mat-dialog-title>Are you sure?</h3>
+  <div mat-dialog-content>
+    Id: {{data.vid}}
+    <p></p>
+    Brand Name: {{data.brand}}
+    <p></p>
+    Model: {{data.model}}
+    <p></p>
+    Date Purchased: {{data.dob}}
+    <p></p>
+  </div>
+
+  <div mat-dialog-actions>
+    <button mat-button [mat-dialog-close]="1" (click)="confirmDelete()">Delete</button>
+    <button mat-button (click)="onNoClick()" tabindex="-1">Cancel</button>
+  </div>
+</div>
