--- a/client/src/app/components/inventory/vehicle-table/vehicle-table.component.html
+++ b/client/src/app/components/inventory/vehicle-table/vehicle-table.component.html
@@ -14,7 +14,7 @@
     <!-- ID Column -->
     <ng-container matColumnDef="vid">
       <mat-header-cell *matHeaderCellDef mat-sort-header>Id</mat-header-cell>
-      <mat-cell *matCellDef="let row" >{{row.vid}}</mat-cell>
+      <mat-cell *matCellDef="let row">{{row.vid}}</mat-cell>
     </ng-container>
 
     <ng-container matColumnDef="brand">
@@ -61,14 +61,10 @@
   </mat-table>
 
 
-  <div class="no-results" [style.display]="dataSource.length == 0 ? '' : 'none'">
+  <div class="no-results" [style.display]="dataSource.renderedData.length == 0 ? '' : 'none'">
     No results
   </div>
 
-  <mat-paginator #paginator
-                 [length]="dataSource.length"
-                 [pageIndex]="0"
-                 [pageSize]="10"
-                 [pageSizeOptions]="[5, 10, 25, 100]">
+  <mat-paginator #paginator [length]="dataSource.filteredData.length" [pageIndex]="0" [pageSize]="10" [pageSizeOptions]="[5, 10, 25, 100]">
   </mat-paginator>
 </div>
