--- a/client/src/app/components/restaurant/food-advanced/food-advanced.component.css
+++ b/client/src/app/components/restaurant/food-advanced/food-advanced.component.css
@@ -9,16 +9,19 @@
 .box1 {
   flex: 1;
   order: 1;
+  padding: 10px;
 }
 
 .box2 {
   flex: 3;
   order: 2;
+  padding: 10px;
 }
 
 .box3 {
   flex: 1;
   order: 3;
+  padding: 10px;
 }
 
 .icon {
