--- a/client/src/app/components/restaurant/food-advanced/food-advanced.component.html
+++ b/client/src/app/components/restaurant/food-advanced/food-advanced.component.html
@@ -32,6 +32,6 @@
   </div>
 </mat-card>
 <div *ngFor="let meal of meals">
-  <app-food-card [price]="meal.price" [title]="meal.name">
+  <app-food-card [price]="meal.price" [title]="meal.name" [mid]="meal.mid" [quantity]="meal.quantity">
   </app-food-card>
 </div>
