arrange proceed-cart component with shared service in order

--- a/client/src/app/components/cart/proceed-cart/proceed-cart.component.css
+++ b/client/src/app/components/cart/proceed-cart/proceed-cart.component.css
@@ -17,6 +17,21 @@
   flex-direction: column;
 }
 
+.box1 {
+  flex: 1;
+  order: 1;
+}
+
+.box2 {
+  flex: 1;
+  order: 2;
+}
+
+.box2 {
+  flex: 1;
+  order: 3;
+}
+
 .example-container > * {
   width: 100%;
 }
