--- a/client/src/app/components/orders/order-item/order-item.component.html
+++ b/client/src/app/components/orders/order-item/order-item.component.html
@@ -2,20 +2,19 @@
   <div class="box1">
     <div class="container">
       <div class="box3">Payment method</div>
-      <div class="box4">Online Card Payment</div>
+      <div class="box4">{{payment}}</div>
     </div>
     <div class="container">
-      <div class="box5">Shipping Address</div>
-      <div class="box6">
-        <p>Romesh Tharaka no 12 Annasikotuwaroad Road,Depanama,Pannipitiya Pannipitiya</p>
-      </div>
+      <div class="box3">Shipping Address</div>
+      <div class="box4">{{address}}</div>
     </div>
   </div>
   <div class="box7">
     <mat-divider [vertical]="true"></mat-divider>
   </div>
   <div class="box2">
-    <img src="https://lk.daraz.io/LhAa-tB9hEC-_90EL1NdULQr5mg=/fit-in/60x60/filters:fill(white):sharpen(1,0,false):quality(80)/product/16/728/1.jpg?2167">
-    <div> 1x Ns-216 Rechargeable Wireless Hair Trimmer</div>
+    <div *ngFor="let item of items">
+      <div> {{item.quantity}} - {{item.item}}</div>
+    </div>
   </div>
 </mat-card>
