Fix issue in proceed cart to order

--- a/client/src/app/components/cart/proceed-cart/proceed-cart.component.html
+++ b/client/src/app/components/cart/proceed-cart/proceed-cart.component.html
@@ -50,6 +50,6 @@
 <mat-card class="containerb">
   <div class="box6"></div>
   <div class="box7">
-    <button mat-raised-button>Make Order</button>
+    <button mat-raised-button (click)="checkouts()">Make Order</button>
   </div>
 </mat-card>
