--- a/client/src/app/components/employee/addemployee/addemployee.component.html
+++ b/client/src/app/components/employee/addemployee/addemployee.component.html
@@ -37,6 +37,12 @@
 
     <div class="form">
       <mat-form-field color="accent">
+        <input matInput placeholder="Type" class="form-control" [(ngModel)]="data.type" name="type" required>
+      </mat-form-field>
+    </div>
+
+    <div class="form">
+      <mat-form-field color="accent">
         <input matInput placeholder="License No" class="form-control" [(ngModel)]="data.license" name="license" required>
       </mat-form-field>
     </div>
@@ -48,7 +54,7 @@
     </div>
 
     <div mat-dialog-actions>
-      <button mat-button [type]="submit" [disabled]="!formControl.valid" [mat-dialog-close]="1" (click)="confirmAdd()">Save</button>
+      <button mat-button [type]="submit" (click)="AddEmployee()">Save</button>
       <button mat-button (click)="onNoClick()" tabindex="-1">Cancel</button>
     </div>
   </form>
