Fix employee crud issues

--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -17,12 +17,12 @@
           <i class="fas fa-clipboard-list icon"></i>My Orders</mat-list-item>
         <mat-list-item *ngIf="chekadmin()" [routerLink]="['/delivery']" (click)="sidenav.close()">
           <i class="fas fa-truck icon"></i>Deliveries</mat-list-item>
-        <mat-list-item>
         <mat-list-item *ngIf="chekadmin()" [routerLink]="['/employee']" (click)="sidenav.close()">
           <i class="fas fa-truck icon"></i>Employee</mat-list-item>
         <mat-list-item>
           <button mat-button (click)="logout()">
-            <mat-icon>launch</mat-icon>Logout</button>
+            <mat-icon>launch</mat-icon>Logout
+          </button>
         </mat-list-item>
       </mat-list>
     </mat-sidenav>
